k8s/clusters/folly/sandbox/agents-sandbox-allow-remote-node.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-remote-node-ingress
  namespace: agents-sandbox
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - remote-node
        - host
